# blog

./: .gitignore  .markdownlintrc  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  Pipfile  README.md  build.sh  cloudflare.sh  go.sh  pelicanconf.py  publishconf.py  pyproject.toml  reports.sh  requirements.txt
.claude/: settings.local.json
content/: post_001.md  post_002.md  post_003.md  post_004.md  post_005.md  post_005_various.md  post_006.md  post_007.md  post_008.md  post_009.md  post_010.md  post_011.md  post_011_marathon.md  post_012.md  post_012_portfolio_website.md  post_013_social_media.md  post_014_side_projects.md  post_15_thinking_of_atari_writer.md  post_dell_009.md
content/extra/: robots.txt
content/pages/: about.md  blog_roll.md  contact.md
docs/: TODO.md
draft/: blank_000.md  post_009.md
draft/dead_theme/: disqus.html
draft/on_hold/: post_dell_009.md
hide_node/: package.json
output/: archives.html  authors.html  categories.html  chatgpt-markdown-running-jan-15.html  first-post.html  index.html  tags.html  what-i-did-today.html
output/author/: matthew-martin.html
output/category/: life.html  testing.html
output/feeds/: all-en.atom.xml  all.atom.xml  all.rss.xml  life.atom.xml  life.rss.xml  matthew-martin.atom.xml  matthew-martin.rss.xml  testing.atom.xml  testing.rss.xml
output/pages/: about.html  contact.html
output/tag/: junk.html  junky.html  life.html  trash.html
scripts/: build.sh  go.sh  make_source.sh  reports.sh
scripts/hide_node/: package-lock.json
spec/: general_improvements.md
themes/pelican-hyde/: LICENSE  README.md
themes/pelican-hyde/static/css/: hyde.css
themes/pelican-hyde/templates/: article.html  base.html  categories.html  index.html  sidebar.html  tags.html
