[project]
name = "blog"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "pelican[markdown]>=4.8.0",
    "typing_extensions"
]

[tool.poetry]
name = "matts-blog"
version = "1.0.0"
description = "Matt's blog"
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["blog", ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
include = [
    "content/**/*.*",
    "themes/**/*.*",
    "content/**/*",
    "themes/**/*"
]
exclude = [
]
license = "N/A"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/blog"
homepage = "https://github.com/matthewdeanmartin/blog"
documentation = "https://github.com/matthewdeanmartin/blog"
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/blog/issues"
"Change Log" = "https://github.com/matthewdeanmartin/blog/blob/main/CHANGES.md"

[tool.poetry.scripts]


[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pelican = { extras = ["markdown"], version = ">=4.8.0, <4.9.0" }
typing_extensions = "*"
# pre-commit = "*"

#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
