[project]
name = "blog"
requires-python = ">=3.13"
version = "0.1.0"
description = "Matt's blog"
readme = "README.md"
authors = [
    { name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" },
]
keywords = ["blog"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pelican-sitemap>=1.2.2",
    "pelican[markdown]>=4.8.0",
    "typing_extensions",
]

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/blog/issues"
"Change Log" = "https://github.com/matthewdeanmartin/blog/blob/main/CHANGES.md"

[tool.uv]
package = false
